<resources>
    <string name="expira_sesion">Session expired</string>

    <string name="app_name">nft-ticket-andrey</string>
    <string name="title_eventos">Eventos</string>
    <string name="descripcion">Composición musical escrita para ser interpretada por varios músicos, generalmente uno o varios instrumentos solistas y una orquesta</string>
    <string name="title_musica">Musica</string>
    <string name="title_search">Search</string>
    <string name="title_perfil">Perfil</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="texto_login1">¿Nuevo Aqui?</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="tu_email">Tu Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="contrase_a_olvidada">¿Contraseña olvidada?</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="cancelar">Cancelar</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="mensaje">Introduce tu direccion de Email y te ayudamos a recuperarla.</string>
    <string name="unete">¡Unete a la comunidad!</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="inicia_sesion">Inicia sesion</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="chk_mensje">Al crear una cuenta, acepta nuestros</string>
    <string name="bienvenido_menu">¡Bienvenido!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="eventos_a_adidos_recientemente"><![CDATA[Eventos añadidos recientemente >]]></string>
    <string name="eventos_mas_cercanos"><![CDATA[Eventos mas cercanos >]]></string>
    <string name="todas">Todas</string>
    <string name="categoria_1">Categoria 1</string>
    <string name="categoria_2">Categoria 2</string>
    <string name="terminos_y_condiciones">Terminos y condiciones</string>
    <string name="titulo_del_evento">Titulo del evento</string>
    <string name="fecha_del_evento">Fecha del evento</string>
    <string name="tarjeta_de_credito">Tarjeta de Credito</string>
    <string name="selecciona_un_metodo_de_pago">Selecciona un metodo de pago</string>
    <string name="coinbase_commerce">Coinbase Commerce</string>
    <string name="pagoMetamask">Para realizar el pago con Metamask, debes hacerlo desde la version web.</string>
    <string name="como_llegar">Como llegar</string>
    <string name="tipos_de_entrada">Tipos de entrada</string>
    <string name="escribe_tu_busqueda">Escribe tu busqueda</string>
    <string name="cancelar2">Cancelar</string>
    <string name="coleccion">Coleccion</string>
</resources>