<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_eventos"
        android:enabled="true"
        android:icon="@drawable/event"
        android:title="@string/title_eventos" />

    <item
        android:id="@+id/navigation_musica"
        android:enabled="true"
        android:icon="@drawable/music"
        android:title="@string/title_musica" />

    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/profile_menu"
        android:title="@string/perfil" />

</menu>