<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_eventos">

    <fragment
        android:id="@+id/navigation_eventos"
        android:name="com.example.nft_ticket_andrey.ui.home.HomeFragment"
        android:label="@string/title_eventos"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_musica"
        android:name="com.example.nft_ticket_andrey.ui.musica.MusicaFragment"
        android:label="@string/title_musica"
        tools:layout="@layout/fragment_musica" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.nft_ticket_andrey.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.nft_ticket_andrey.ui.perfil.ProfileFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_collections"
        android:name="com.example.nft_ticket_andrey.ui.collections.CollectionsFragment"
        android:label="Coleccion"
        tools:layout="@layout/fragment_collections" />
</navigation>